[project]
name = 'stcore'
version = '1.0.0'
description = 'A collection of helpers for use with AWS Lambda'
readme = 'README.md'
authors = [
    { name = 'Frank Shrestha', email = 'abitofmaya@outlook.com' }
]
requires-python = '>=3.9'
dependencies = [
    'boto3>=1.40.15',
    'pymysql>=1.1.0',
]

[build-system]
requires = ['uv_build>=0.8.3,<0.9.0']
build-backend = 'uv_build'
